--- a/client/src/app/panels/special-award/special-award.component.html
+++ b/client/src/app/panels/special-award/special-award.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" [ngClass]="'columns-' + size.columns">
     <div class="icon" [ngStyle]="{
         'background-image': 'url(' + properties.icon + ')'
     }"></div>
