--- a/client/src/app/panels/series-direction-correlation/series-direction-correlation.component.scss
+++ b/client/src/app/panels/series-direction-correlation/series-direction-correlation.component.scss
@@ -16,10 +16,6 @@ h3 {
     padding: 0;
 }
 
-.tagline {
-    
-}
-
 .container {
     flex: 1;
     flex-grow: 1;
@@ -31,10 +27,11 @@ h3 {
 .title {
     display: block;
     position: absolute;
-    top: 0;
+    top: 2px;
     left: 0;
     right: 200px;
     text-align: center;
+    font-size: 18px;
     overflow: hidden;
     text-overflow: ellipsis;
 }
