--- a/client/src/app/opinions/opinions.component.html
+++ b/client/src/app/opinions/opinions.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <h1>WrongOpinions.moe</h1>
+    <h1><a routerLink="">WrongOpinions.moe</a></h1>
     <h2>{{username}}</h2>
     <app-progress-bar *ngIf="loading || (pendingJob && !pendingJob.failed)" [intervals]="loadingIntervals" [progress]="loadingProgress"></app-progress-bar>
     <div class="status">
