--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -49,7 +49,7 @@
             <dt>Who?</dt>
             <dd>
                 <p>
-                    WrongOpinions is made entirely by Joshua Walsh, a software developer from Sydney, Australia.
+                    WrongOpinions is made entirely by Yoshi Walsh, a software developer from Sydney, Australia.
                 </p>
             </dd>
 
@@ -59,10 +59,10 @@
                     WrongOpinions uses publicly available data from MyAnimeList.
                 </p>
                 <p>
-                    I'll write a <a href="https://blog.joshwalsh.me/" target="_blank">blog post</a> in future that explains the technical details.
+                    I'll write a <a href="https://blog.yoshiwalsh.me/" target="_blank">blog post</a> in future that explains the technical details.
                 </p>
                 <p>
-                    WrongOpinions is/will be also open source, check out the repo <a href="https://github.com/JoshuaWalsh/wrongopinions" target="_blank">here</a>.
+                    WrongOpinions is/will be also open source, check out the repo <a href="https://github.com/YoshiWalsh/wrongopinions" target="_blank">here</a>.
                 </p>
             </dd>
 
@@ -104,7 +104,7 @@
                 </p>
                 <p>
                     None of the above? I don't know, you're probably cursed. You can try
-                    <a href="https://github.com/JoshuaWalsh/wrongopinions/issues" target="_blank">submitting an issue on GitHub</a>
+                    <a href="https://github.com/YoshiWalsh/wrongopinions/issues" target="_blank">submitting an issue on GitHub</a>
                     or consulting an Axis Cult priest.
                 </p>
             </dd>
